@@ -1,3 +1,28 @@
 # MiniDB-Client
 
 Maven project for MiniDB Client
+
+
+
+## 运行方式
+
+### 1. IDEA
+
+ 在IDEA中设置configuration为：
+
+```java
+main class: application.ClientDialog
+VM option: --module-path path\to\javafx-sdk\lib --add-modules=javafx.controls,javafx.fxml
+jre: path\to\jdk
+```
+
+
+
+### 2. maven
+
+在Client目录下执行命令：
+
+```shell
+mvn compile exec:java
+```
+
